# blazel

./: .gitignore  Makefile  pyproject.toml
blazel/: awslogger.py  base.py  cli.py  clients.py  config.py  logger.py  parquet.py  serializable.py  serialize.py  tables.py  tasks.py
blazel/handler/: sharepoint.py
driver/: Dockerfile
example/extractload-layer/: requirements.txt
example/src/: app.py  extract.py  tables.yaml
extractload/: app.py  cli.py  clients.py  config.py  extract.py  tasks.py  wh_base.py  wh_snowflake.py
extractload/warehouse/: base.py  sf_csv.py  sf_parquet.py  tasks.py
src/blazel/: base.py  cli.py  clients.py  config.py  parquet.py  serializable.py  tables.py  tasks.py  typing.py
src/blazel/handler/: aiagent.py  database.py  entra.py  sqlserver.py  sqlserver_columns.py
tests/: conftest.py  test_base.py  test_parquet.py  test_tables.py  test_tasks.py
tests/warehouse/: test_base.py  test_sf_csv.py  test_sf_parquet.py  test_tasks.py
